# JamForLeelah

./: .dropbox  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  todo.txt
assets/: cobbles_c.tga  main_character.fbx  short_wall.fbx  tree.fbx  under_glass_game_assets_folder.txt  wall_pillar.fbx
assets/art/: bridge_c.crn  cobble_floor.fbx  cobble_floor_export.txt  dry_fountain.fbx  dry_fountain_c.crn  dry_fountain_c.tga  dry_fountain_export.txt  dry_fountain_nav_export.txt  floor_quad_export.txt  flower_box_export.txt  flowerbox_c.crn  garden_tall_corner.fbx  garden_tall_corner_c.crn  garden_tall_corner_export.txt  garden_tall_corner_nav.fbx  garden_tall_corner_nav_export.txt  garden_tall_nook.fbx  garden_tall_nook_c.crn  garden_tall_nook_export.txt  garden_tall_nook_nav_export.txt  garden_tall_stairs.crn  garden_tall_stairs_export.txt  garden_tall_stairs_nav.fbx  garden_tall_stairs_nav_export.txt  garden_tall_wall.fbx  garden_tall_wall_c.crn  garden_tall_wall_export.txt  garden_tall_wall_nav.fbx  garden_tall_wall_nav_export.txt  in_memory_of.crn  lamp_c.crn  lampshadow.crn  logo_big.crn  main_bad_c.crn  main_character_c.crn  main_character_rig_export.txt  main_good_c.crn  man_npc.fbx  man_npc_2.crn  man_npc_c.crn  (+24 more)
assets/art/Source/: bridge.fbx  cube_irradiance.dds  cube_mip.dds  floor_quad.fbx  flower_box.fbx  garden_tall_nook_nav.fbx  garden_tall_stairs.fbx  garden_tall_stairs_nav.fbx  main_character.fbx  street_lamp.fbx  woman_npc.fbx
assets/blend/: man_npc_rig.blend  man_npc_rig_2.blend  man_npc_rig_3.blend  maptiles.blend  woman_npc_rig.blend  woman_npc_rig_2.blend  woman_npc_rig_3.blend  woman_npc_rig_4.txt
assets/blender_script_addons/: jfl_export.py
assets/jillsUnityBuild/: Assembly-CSharp-firstpass-vs.csproj  Assembly-CSharp-vs.csproj  Assembly-CSharp.csproj  jillsUnityBuild-csharp.sln  jillsUnityBuild.sln  jillsUnityBuild.userprefs  leehlahJam-csharp.sln  leehlahJam.sln  leehlahJam.userprefs
assets/jillsUnityBuild/Assets/: staticVariables.cs
assets/jillsUnityBuild/Assets/materials/: Gray.mat  Light.mat  blue.mat  eyes.mat  green.mat  groundTemp.mat  red.mat  spawnPoint.mat
assets/jillsUnityBuild/Assets/meshes/: cobble_floor.fbx  flower_box.fbx  saveMe.fbx  street_lamp.fbx
assets/jillsUnityBuild/Assets/meshes/Materials/: EnvironmentBasicText.mat  cobbles_c.mat  flowerbox_c.mat  new_lamp_c.mat
assets/jillsUnityBuild/Assets/prefabs/: Floor1.prefab  characterHolder.prefab  gameMaster.prefab  green.prefab  grey.prefab  light.prefab  red.prefab
assets/jillsUnityBuild/Assets/scenes/: test.unity  testSpawning.unity
assets/jillsUnityBuild/Assets/scripts/: basicBehavior.cs  cameraFollow.cs  playerMovement.cs  spawnTerrain.cs
assets/jillsUnityBuild/Assets/textures/: cobbles_c.tga
assets/jillsUnityBuild/ProjectSettings/: TagManager.asset
assets/shaders/: 2D_textured.frag  2D_textured.vert  3D_model.frag  3D_model.vert  3D_model_skinned.frag  3D_model_skinned.vert  debug_draw.frag  debug_draw.vert  debug_draw_text.frag  debug_draw_text.vert  nav_mesh.frag  nav_mesh.vert
assets/shaders_gles/: 2D_textured.frag  2D_textured.vert  3D_model.frag  3D_model.vert  3D_model_skinned.frag  3D_model_skinned.vert  debug_draw.frag  debug_draw.vert  debug_draw_text.frag  debug_draw_text.vert  nav_mesh.frag  nav_mesh.vert
cmake/: UtilityFunctions.cmake
engine/src/: renderer.cpp
lib/FBX_SDK_2015.1/: FBXSDKConfig.cmake
lib/crunch_rev319/inc/: crn_decomp.h  crnlib.h
lib/glew/: CMakeLists.txt
lib/glew/src/: glew.c
lib/ogg/: CMakeLists.txt
lib/stb-master/data/: Thumbs.db
lib/stb-master/data/herringbone/: Thumbs.db
lib/vorbis/: CMakeLists.txt
src/: fbx.cpp  main.cpp
src/fbx/: fbx.cpp  fbx.h
src/fbx/ImportScene/: DisplayAnimation.cxx  DisplayCache.cxx  DisplayCommon.cxx  DisplayGenericInfo.cxx  DisplayHierarchy.cxx  DisplayLink.cxx  DisplayMaterial.cxx  DisplayMesh.cxx  DisplayNurb.cxx  DisplayPivotsAndLimits.cxx  DisplayPose.cxx  DisplayShape.cxx  DisplayTexture.cxx  DisplayUserProperties.cxx  ImportScene_net2012.opensdf  ImportScene_net2012.vcxproj
src/game/: assets.h  game_state.cpp  game_state.h  nav_mesh.cpp  nav_mesh.h
src/internal/: common.cpp  common.h  geometry.cpp  geometry.h  memory.cpp  memory.h  separable_transform.cpp  separable_transform.h
src/platform_sdl/: audio.cpp  audio.h  blender_file_io.cpp  blender_file_io.h  debug_draw.cpp  debug_draw.h  debug_text.cpp  debug_text.h  error.cpp  error.h  file_io.cpp  file_io.h  graphics.cpp  graphics.cpp.orig  graphics.h  profiler.cpp  profiler.h
